fixing about section responsivity

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <h2 class="Title-hero">About The Event</h2>
             <br>
             <div class="row">
-              <div class="col-xl-8 col-lg-8">
+              <div class="col-md-8">
                 <p>Security BSides is a non-profit global security event created by a group of hackers, security researchers, and passionate cybersecurity experts who are keen to share their knowledge and ideas.
                 <br>
                 <br>
@@ -148,12 +148,13 @@
                 <br>
                 <br>
                 The event aims to bring together a community passionate about cybersecurity in Algeria.</p>
+                <br class="no-display-lg">
               </div>
-              <div class="col-xl-4 ml-xl-0 col-lg-4">
+              <div class="col-md-3 ml-md-auto">
                 <h3 class="Title-hero">Where</h3>
                 <p>École nationale supérieure d'informatique, Algiers</p>
                 <br>
-                <br>
+                <br class="no-display-sm">
                 <h3 class="Title-hero">When</h3>
                 <p>Saturday and Sunday<br>January 08-09th, 2022</p>
               </div>
