fixing content (counter and cyber security misspel)

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="row">
               <div class="col-lg-4">
                   <div class="counter-text">
-                      <span>Time left for BSides Algiers Qualifications</span>
+                      <span>Time left for BSides Algiers Finals Event</span>
                       <h3>Count Every Second <br />Until The End</h3>
                   </div>
               </div>
@@ -144,7 +144,7 @@
                 Organized by Shellmates, the event took place in a first online qualification phase on december 2020.
                 <br>
                 <br>
-                The Event will include the finals of the CTF competition, alongside conferences presented by local and international experts, and workshops seeking to share the maximum of knowledge and skills related to cyber security.
+                The Event will include the finals of the CTF competition, alongside conferences presented by local and international experts, and workshops seeking to share the maximum of knowledge and skills related to cybersecurity.
                 <br>
                 <br>
                 The event aims to bring together a community passionate about cybersecurity in Algeria.</p>
@@ -367,7 +367,7 @@
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Formal meeting</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Pro-leveled speakers</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Advanced cyber security topics</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Advanced cybersecurity topics</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Theoretical concepts of hacking</li>
                 </ul>
                 <hr>
