fixing content 2 (faq 3)

--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
                 </li>
       
                 <li>
-                  <a data-toggle="collapse" href="#faq3" class="collapsed">What to expect at BSides Algiers 2021 finals onsite edition? <i class="fa fa-minus-circle"></i></a>
+                  <a data-toggle="collapse" href="#faq3" class="collapsed">What to expect at BSides Algiers 2021 Finals onsite edition? <i class="fa fa-minus-circle"></i></a>
                   <div id="faq3" class="collapse" data-parent="#faq-list">
                     <p>
-                      This phase includes the finals of the CTF (Capture The Flag) competition, a cybersecurity contest in which a set of problems is given, covering various topics related to cybersecurity (Cryptography, Reverse-Engineering, Exploitation, Web Security, Digital Forensics).
+                      This phase includes the finals of the CTF (Capture The Flag) competition, a cybersecurity contest in which a set of problems is given, covering various topics related to cybersecurity (Cryptography, Reverse-Engineering, Binary Exploitation (PWN), Web Security, Digital Forensics).
                       <br>
                       Alongside with conferences, and exciting workshops related to cybersecurity!
                     </p>
