fixing content 4, ommitting faq4, fixing hero background

--- a/index.html
+++ b/index.html
@@ -282,20 +282,6 @@
                     </p>
                   </div>
                 </li>
-
-                <li>
-                  <a data-toggle="collapse" href="#faq4" class="collapsed">Why sponsor BSides Algiers 2021 Finals? <i class="fa fa-minus-circle"></i></a>
-                  <div id="faq4" class="collapse" data-parent="#faq-list">
-                    <p>
-                      Sponsoring Security BSides Algiers 2021 Finals event means that:
-                    </p>
-                    <ul>
-                        <li>Your organization is recognized as a valuable contributor of Security BSides globally.</li>
-                        <li>You promote the organization along with its infosec culture in Algeria.</li>
-                        <li>You attract information security experts in your organization.</li>
-                    </ul>
-                  </div>
-                </li>
       
                 <li>
                   <a data-toggle="collapse" href="#faq5" class="collapsed">How to reach us? <i class="fa fa-minus-circle"></i></a>
@@ -388,7 +374,7 @@
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Interactive meetings</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Hands-on workshops</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>From beginner friendly to Advanced</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>From beginner friendly to advanced</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Piratical hacking concepts</li>
                 </ul>
                 <hr>
