--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
           <div class="row">
               <div class="col-lg-4">
                   <div class="counter-text">
-                      <span>Time left for BSides Algiers Finals Event</span>
-                      <h3>Count Every Second <br />Until The End</h3>
+                      <span>Time left for BSides Algiers Finals event</span>
+                      <h3>Count every second <br />until the end</h3>
                   </div>
               </div>
               <div class="col-lg-8">
@@ -247,7 +247,7 @@
                   <a data-toggle="collapse" class="collapsed" href="#faq1">Who organizes BSides Algiers 2021? <i class="fa fa-minus-circle"></i></a>
                   <div id="faq1" class="collapse" data-parent="#faq-list">
                     <p>
-                      The event is organized by Shellmates Club, a group of students passionate about cybersecurity. Founded on December 19th 2011 as OWASP Student Chapter Algeria, the group was the first representative of OWASP in Algeria. The main goal of the club is to create a community of infosec enthusiasts and encourage knowledge sharing on the IT security field.
+                      The event is organized by Shellmates Club, a group of students passionate about cybersecurity. Founded on December 19th 2011 as OWASP Student Chapter Algeria, the group was the first representative of OWASP in Algeria. The main goal of the club is to create a community of infosec enthusiasts and encourage knowledge sharing in the IT security field.
                     </p>
                   </div>
                 </li>
@@ -267,7 +267,7 @@
                   <a data-toggle="collapse" href="#faq3" class="collapsed">What to expect at BSides Algiers 2021 Finals onsite edition? <i class="fa fa-minus-circle"></i></a>
                   <div id="faq3" class="collapse" data-parent="#faq-list">
                     <p>
-                      This phase includes the finals of the CTF (Capture The Flag) competition, a cybersecurity contest in which a set of problems is given, covering various topics related to cybersecurity (Cryptography, Reverse-Engineering, Binary Exploitation PWN, Web Security, Digital Forensics).
+                      This phase includes the finals of the CTF (Capture The Flag) competition, a cybersecurity contest in which a set of problems is given, covering various topics related to cybersecurity (Cryptography, Reverse-Engineering, Binary Exploitation, Web Security, Digital Forensics).
                       <br>
                       Alongside with conferences, and exciting workshops related to cybersecurity!
                     </p>
