--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Interactive meetings</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Hands-on workshops</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>From beginner friendly to advanced</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Piratical hacking concepts</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Practical hacking concepts</li>
                 </ul>
                 <hr>
                 <div class="text-center">
