--- a/index.html
+++ b/index.html
@@ -164,6 +164,110 @@
       </div>
     </section>
 
+    <!--==========================
+      Speakers Section
+    ============================-->
+    <section id="speakers" class="wow fadeInUp">
+      <div class="container">
+        <div class="section-header">
+          <h2>Event Speakers</h2>
+          <p>Here are some of our speakers</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063375/bsides_site/speakers/1_xhgenv.jpg" alt="Hafidh Zouahi" class="img-fluid">
+              <div class="details">
+                <h3><a>Hafidh Zouahi</a></h3>
+                <p class="text-capitalize">Computer systems engineer <br> with a keen interest in security</p>
+                <div class="social">
+                  <a href="https://twitter.com/hfz1337" target="_blank"><i class="fa fa-twitter"></i></a>
+                  <a href="https://www.facebook.com/hfz1337" target="_blank"><i class="fa fa-facebook"></i></a>
+                  <a href = "mailto:gh_zouahi@esi.dz" target="_blank"><i class="fa fa-inbox"></i></a>
+                  <a href="https://hfz1337.github.io/" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                      <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                      <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                    </svg>
+                </a>
+                  <a href="https://www.linkedin.com/in/hafidh-zouahi/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641057060/bsides_site/speakers/7_qakoad.png" alt="Hamza Tahmi" class="img-fluid">
+              <div class="details">
+                <h3><a >Hamza Tahmi</a></h3>
+                <p class="text-capitalize">Security engineer focusing on building secure products</p>
+                <div class="social">
+                  <a href="https://www.facebook.com/WhyYouAreVisitingMyProfile" target="_blank"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.linkedin.com/in/hamza-tahmi/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063387/bsides_site/speakers/2_pd8tey.jpg" alt="Benaissa Ayoub" class="img-fluid">
+              <div class="details">
+                <h3><a>Benaissa Ayoub</a></h3>
+                <p class="text-capitalize">crypto engineer at Zama</p>
+                <div class="social">
+                  <a href="https://twitter.com/y0uben11" target="_blank"><i class="fa fa-twitter"></i></a>
+                  <a href = "mailto:ayoub.benaissa.ab@gmail.com" target="_blank"><i class="fa fa-inbox"></i></a>
+                  <a href="https://www.ayoub-benaissa.com/" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                      <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                      <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                    </svg>
+                  </a>
+                  <a href="https://www.linkedin.com/in/ayoub-benaissa/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063394/bsides_site/speakers/4_az7fra.jpg" alt="Bilal Retiat" class="img-fluid">
+              <div class="details">
+                <h3><a>Bilal Retiat</a></h3>
+                <p class="text-capitalize">Cyber Security Specialist at Realistic Security</p>
+                <div class="social">
+                  <a href="https://twitter.com/philomath213" target="_blank"><i class="fa fa-twitter"></i></a>
+                  <a href = "mailto:bilal.retiat@gmail.com" target="_blank"><i class="fa fa-inbox"></i></a>
+                  <a href="https://philomath213.github.io/" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                      <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                      <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                    </svg>
+                  </a>
+                  <a href="https://www.linkedin.com/in/bilal-retiat/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063400/bsides_site/speakers/5_rxovaq.jpg" alt="Bendali Brahim" class="img-fluid">
+              <div class="details">
+                <h3><a>Bendali Brahim</a></h3>
+                <p class="text-capitalize">security researcher at Synack Red Team</p>
+                <div class="social">
+                  <a href="https://twitter.com/elvi7major" target="_blank"><i class="fa fa-twitter"></i></a>
+                  <a href="https://www.facebook.com/elvi7major" target="_blank"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.linkedin.com/in/elvi7major/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
 
 
     <!--==========================
