fixing meta data

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>The Annual BSides Algiers Competition</title>
+  <title>The Annual BSides Algiers Event</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="Bsides, Algiers, Quals, Competition, Shellmates, Ctf" name="keywords">
+  <meta content="Bsides, Algiers, Finals, Workshop, Conference, Shellmates, Ctf" name="keywords">
   <meta content="Security BSides is a non-profit global security event created by a group of hackers, security researchers, and passionate cybersecurity experts who are keen to share their knowledge and ideas." name="description">
   <meta property="og:image" content="https://res.cloudinary.com/shellmates-club/image/upload/v1607890230/bsides_site/img_jjiei8.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
@@ -14,7 +14,7 @@
   <meta property="og:image:alt" content="Bsides Logo" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://bsidesalgiers.com/" />
-  <meta property="og:title" content="The Annual BSides Algiers Competition" />
+  <meta property="og:title" content="The Annual BSides Algiers Event" />
   <meta property="og:description" content="Security BSides is a non-profit global security event created by a group of hackers, security researchers, and passionate cybersecurity experts who are keen to share their knowledge and ideas." />
 
   <!-- Favicons -->
