--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
-          <!-- <li><a href="#speakers">Speakers</a></li>
-          <li><a href="#schedule">Schedule</a></li> -->
+          <li><a href="#speakers">Speakers</a></li>
+          <!-- <li><a href="#schedule">Schedule</a></li> -->
           <!-- <li><a href="#venue">Venue</a></li> -->
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#supporters">Sponsors</a></li>
@@ -455,7 +455,7 @@
                 <h6 class="card-type text-center">Conferences</h6>
                 <hr>
                 <ul class="fa-ul">
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Formal meeting</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Formal meetings</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Pro-leveled speakers</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Advanced cybersecurity topics</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Theoretical concepts of hacking</li>
