--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
     <section id="speakers" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
-          <h2>Event Speakers</h2>
-          <p>Here are some of our speakers</p>
+          <h2>Event Speakers & Mentors</h2>
+          <p>Here are some of our speakers and mentors</p>
         </div>
 
         <div class="row">
@@ -259,6 +259,74 @@
                   <a href="https://twitter.com/elvi7major" target="_blank"><i class="fa fa-twitter"></i></a>
                   <a href="https://www.facebook.com/elvi7major" target="_blank"><i class="fa fa-facebook"></i></a>
                   <a href="https://www.linkedin.com/in/elvi7major/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641111324/bsides_site/speakers/6_yd4dff.jpg" alt="Nasreddine Bencherchali" class="img-fluid">
+              <div class="details">
+                <h3><a>Nasreddine Bencherchali</a></h3>
+                <p class="text-capitalize">Detection Engineer, Threat Hunter & Security Researcher</p>
+                <div class="social">
+                  <a href="https://twitter.com/nas_bench" target="_blank"><i class="fa fa-twitter"></i></a>
+                  <a href="https://nasbench.medium.com/" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                      <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                      <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                    </svg>
+                </a>
+                  <a href="https://www.linkedin.com/in/nasreddinebencherchali/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641111362/bsides_site/speakers/8_dgqjo9.png" alt="Zineddine Boudegna" class="img-fluid">
+              <div class="details">
+                <h3><a>Zineddine Boudegna</a></h3>
+                <p class="text-capitalize">Cyber Security director at Deloitte</p>
+                <div class="social">
+                  <a href="https://twitter.com/BOUDEGNAZinedin" target="_blank"><i class="fa fa-twitter"></i></a>
+                  <a href="https://www.facebook.com/boudegna" target="_blank"><i class="fa fa-facebook"></i></a>
+                  <a href = "mailto:boudegna@gmail.com" target="_blank"><i class="fa fa-inbox"></i></a>
+                  <a href="https://www.linkedin.com/in/zinedine-boudegna/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641112719/bsides_site/speakers/9_tdhays.png" alt="Merouan Oussama Abdallah" class="img-fluid">
+              <div class="details">
+                <h3><a>Merouan Oussama Abdallah</a></h3>
+                <p class="text-capitalize">technical department's manager <br>at Shellmates club & Cybersecuirty enthusiast</p>
+                <div class="social">
+                  <a href="https://www.facebook.com/abdou.merouan.73" target="_blank"><i class="fa fa-facebook"></i></a>
+                  <a href = "mailto:jo_merouan@esi.dz" target="_blank"><i class="fa fa-inbox"></i></a>
+                  <a href="https://www.linkedin.com/in/oussama-abdallah-merouan-835a421b6/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641112742/bsides_site/speakers/10_orxpc7.png" alt="Mokrane Abdelmalek" class="img-fluid">
+              <div class="details">
+                <h3><a>Mokrane Abdelmalek</a></h3>
+                <p class="text-capitalize">Dev co-manager at GDG Algiers <br>& Cybersecurity enthusiast</p>
+                <div class="social">
+                  <a href="https://www.facebook.com/m0kr4n3" target="_blank"><i class="fa fa-facebook"></i></a>
+                  <a href = "mailto:jm_abdelmalek@esi.dz" target="_blank"><i class="fa fa-inbox"></i></a>
+                  <a href="https://github.com/m0kr4n3" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                      <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                      <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                    </svg>
+                </a>
+                  <a href="https://www.linkedin.com/in/m0kr4n3/" target="_blank"><i class="fa fa-linkedin"></i></a>
                 </div>
               </div>
             </div>
