adding speakers details

--- a/index.html
+++ b/index.html
@@ -53,8 +53,6 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <!-- Uncomment below if you prefer to use a text logo -->
-        <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
         <a href="#intro" class="scrollto"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606911103/bsides_site/LOGOTRANSPARENT_jjchhp.png" alt="" title=""></a>
       </div>
 
@@ -179,7 +177,7 @@
             <div class="speaker">
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063375/bsides_site/speakers/1_xhgenv.jpg" alt="Hafidh Zouahi" class="img-fluid">
               <div class="details">
-                <h3><a>Hafidh Zouahi</a></h3>
+                <h3><a href="hfdz.html">Hafidh Zouahi</a></h3>
                 <p class="text-capitalize">Computer systems engineer <br> with a keen interest in security</p>
                 <div class="social">
                   <a href="https://twitter.com/hfz1337" target="_blank"><i class="fa fa-twitter"></i></a>
@@ -200,7 +198,7 @@
             <div class="speaker">
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641057060/bsides_site/speakers/7_qakoad.png" alt="Hamza Tahmi" class="img-fluid">
               <div class="details">
-                <h3><a >Hamza Tahmi</a></h3>
+                <h3><a href="hmzth.html">Hamza Tahmi</a></h3>
                 <p class="text-capitalize">Security engineer focusing on building secure products</p>
                 <div class="social">
                   <a href="https://www.facebook.com/WhyYouAreVisitingMyProfile" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -213,7 +211,7 @@
             <div class="speaker">
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063387/bsides_site/speakers/2_pd8tey.jpg" alt="Benaissa Ayoub" class="img-fluid">
               <div class="details">
-                <h3><a>Benaissa Ayoub</a></h3>
+                <h3><a href="ayben.html">Benaissa Ayoub</a></h3>
                 <p class="text-capitalize">crypto engineer at Zama</p>
                 <div class="social">
                   <a href="https://twitter.com/y0uben11" target="_blank"><i class="fa fa-twitter"></i></a>
@@ -233,8 +231,8 @@
             <div class="speaker">
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063394/bsides_site/speakers/4_az7fra.jpg" alt="Bilal Retiat" class="img-fluid">
               <div class="details">
-                <h3><a>Bilal Retiat</a></h3>
-                <p class="text-capitalize">Cyber Security Specialist at Realistic Security</p>
+                <h3><a href="blrt.html">Bilal Retiat</a></h3>
+                <p class="text-capitalize">Cybersecurity Specialist at Realistic Security</p>
                 <div class="social">
                   <a href="https://twitter.com/philomath213" target="_blank"><i class="fa fa-twitter"></i></a>
                   <a href = "mailto:bilal.retiat@gmail.com" target="_blank"><i class="fa fa-inbox"></i></a>
@@ -253,7 +251,7 @@
             <div class="speaker">
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063400/bsides_site/speakers/5_rxovaq.jpg" alt="Bendali Brahim" class="img-fluid">
               <div class="details">
-                <h3><a>Bendali Brahim</a></h3>
+                <h3><a href="bhben.html">Bendali Brahim</a></h3>
                 <p class="text-capitalize">security researcher at Synack Red Team</p>
                 <div class="social">
                   <a href="https://twitter.com/elvi7major" target="_blank"><i class="fa fa-twitter"></i></a>
@@ -267,7 +265,7 @@
             <div class="speaker">
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641111324/bsides_site/speakers/6_yd4dff.jpg" alt="Nasreddine Bencherchali" class="img-fluid">
               <div class="details">
-                <h3><a>Nasreddine Bencherchali</a></h3>
+                <h3><a href="nsrben.html">Nasreddine Bencherchali</a></h3>
                 <p class="text-capitalize">Detection Engineer, Threat Hunter & Security Researcher</p>
                 <div class="social">
                   <a href="https://twitter.com/nas_bench" target="_blank"><i class="fa fa-twitter"></i></a>
@@ -286,8 +284,8 @@
             <div class="speaker">
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641111362/bsides_site/speakers/8_dgqjo9.png" alt="Zineddine Boudegna" class="img-fluid">
               <div class="details">
-                <h3><a>Zineddine Boudegna</a></h3>
-                <p class="text-capitalize">Cyber Security director at Deloitte</p>
+                <h3><a href="zinben.html">Zineddine Boudegna</a></h3>
+                <p class="text-capitalize">Cybersecurity director at Deloitte</p>
                 <div class="social">
                   <a href="https://twitter.com/BOUDEGNAZinedin" target="_blank"><i class="fa fa-twitter"></i></a>
                   <a href="https://www.facebook.com/boudegna" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -301,7 +299,7 @@
             <div class="speaker">
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641112719/bsides_site/speakers/9_tdhays.png" alt="Merouan Oussama Abdallah" class="img-fluid">
               <div class="details">
-                <h3><a>Merouan Oussama Abdallah</a></h3>
+                <h3><a href="ousmer.html">Merouan Oussama Abdallah</a></h3>
                 <p class="text-capitalize">technical department's manager <br>at Shellmates club & Cybersecuirty enthusiast</p>
                 <div class="social">
                   <a href="https://www.facebook.com/abdou.merouan.73" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -315,9 +313,10 @@
             <div class="speaker">
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641112742/bsides_site/speakers/10_orxpc7.png" alt="Mokrane Abdelmalek" class="img-fluid">
               <div class="details">
-                <h3><a>Mokrane Abdelmalek</a></h3>
+                <h3><a href="mokrn.html">Mokrane Abdelmalek</a></h3>
                 <p class="text-capitalize">Dev co-manager at GDG Algiers <br>& Cybersecurity enthusiast</p>
                 <div class="social">
+                  <a href="https://twitter.com/m0kr4n3" target="_blank"><i class="fa fa-twitter"></i></a>
                   <a href="https://www.facebook.com/m0kr4n3" target="_blank"><i class="fa fa-facebook"></i></a>
                   <a href = "mailto:jm_abdelmalek@esi.dz" target="_blank"><i class="fa fa-inbox"></i></a>
                   <a href="https://github.com/m0kr4n3" target="_blank">
