fixing brahim dedcription

--- a/bhben.html
+++ b/bhben.html
@@ -97,7 +97,7 @@
                   <a href="https://www.facebook.com/elvi7major" target="_blank"><i class="fa fa-facebook"></i></a>
                   <a href="https://www.linkedin.com/in/elvi7major/" target="_blank"><i class="fa fa-linkedin"></i></a>
               </div>
-              <p>Bendali Brahim is a cybersecurity enthusiast, CTF player, security researcher at Synack Red Team and business manager, Networking infra and communication protocol</p>
+              <p>Bendali Brahim is a cybersecurity enthusiast, CTF player and security researcher at Synack Red Team. He is also a business manager and a networking infrastructure and communication protocol specialist</p>
             </div>
           </div>
           
