--- a/nsrben.html
+++ b/nsrben.html
@@ -102,7 +102,7 @@
               </a>
                 <a href="https://www.linkedin.com/in/nasreddinebencherchali/" target="_blank"><i class="fa fa-linkedin"></i></a>
               </div>
-              <p>Nasreddine is a threat hunter/detection engineer with more than 4 years of experience in the field. Passionate about all things detection, threat hunting, and in love with windows internals..</p>
+              <p>Nasreddine is a threat hunter/detection engineer with more than 4 years of experience in the field. Passionate about all things detection, threat hunting, and in love with windows internals.</p>
             </div>
           </div>
           
