--- a/ousmer.html
+++ b/ousmer.html
@@ -97,7 +97,7 @@
                   <a href = "mailto:jo_merouan@esi.dz" target="_blank"><i class="fa fa-inbox"></i></a>
                   <a href="https://www.linkedin.com/in/oussama-abdallah-merouan-835a421b6/" target="_blank"><i class="fa fa-linkedin"></i></a>
               </div>
-              <p>Merouan Oussama Abdallah is a third-year student at ESI Algiers, technical department's manager at Shellmates club, cybersecuirty enthusiast and CTF player mainly in the web category and PWN with an interest in competitive programming. He is a member of Shellsec and Cyberereduties.
+              <p>Merouan Oussama Abdallah is a third-year student at ESI Algiers, technical department's manager at Shellmates club, cybersecurity enthusiast and CTF player mainly in the web category and PWN with an interest in competitive programming. He is a member of Shellsec and CyberErudites.
               </p>
             </div>
           </div>
