--- a/zinben.html
+++ b/zinben.html
@@ -98,9 +98,9 @@
                 <a href = "mailto:boudegna@gmail.com" target="_blank"><i class="fa fa-inbox"></i></a>
                 <a href="https://www.linkedin.com/in/zinedine-boudegna/" target="_blank"><i class="fa fa-linkedin"></i></a>
               </div>
-              <p>Zineddine Boudegna is cybersecurity director at Deloitte , with more than 10 years in this field , certified information Security Manager , NIST Csf , iso27001 lead auditor , iso22301 lead auditor entreprise projects manager & certified ethical hacker .
+              <p>Zineddine Boudegna is cybersecurity director at Deloitte, with more than 10 years in this field, certified information Security Manager, NIST Csf, iso27001 lead auditor, iso22301 lead auditor entreprise projects manager & certified ethical hacker.
                 </p>
-              <p>He had the chance to work on many complexes cyber projects on national and international level in various cyber domains such :
+              <p>He had the chance to work on many complex cyber projects on national and international level in various cyber domains such :
                 Information Security Governance,
                 Webtrust for CA,
                 Security operation centers,
