--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
               <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641112719/bsides_site/speakers/9_tdhays.png" alt="Merouan Oussama Abdallah" class="img-fluid">
               <div class="details">
                 <h3><a href="ousmer.html">Merouan Oussama Abdallah</a></h3>
-                <p class="text-capitalize">technical department's manager <br>at Shellmates club & Cybersecuirty enthusiast</p>
+                <p class="text-capitalize">technical department's manager <br>at Shellmates club & Cybersecurity enthusiast</p>
                 <div class="social">
                   <a href="https://www.facebook.com/abdou.merouan.73" target="_blank"><i class="fa fa-facebook"></i></a>
                   <a href = "mailto:jo_merouan@esi.dz" target="_blank"><i class="fa fa-inbox"></i></a>
