--- a/index.html
+++ b/index.html
@@ -287,7 +287,6 @@
                 <h3><a href="zinben.html">Zineddine Boudegna</a></h3>
                 <p class="text-capitalize">Cybersecurity director at Deloitte</p>
                 <div class="social">
-                  <a href="https://twitter.com/BOUDEGNAZinedin" target="_blank"><i class="fa fa-twitter"></i></a>
                   <a href="https://www.facebook.com/boudegna" target="_blank"><i class="fa fa-facebook"></i></a>
                   <a href = "mailto:boudegna@gmail.com" target="_blank"><i class="fa fa-inbox"></i></a>
                   <a href="https://www.linkedin.com/in/zinedine-boudegna/" target="_blank"><i class="fa fa-linkedin"></i></a>
@@ -302,6 +301,7 @@
                 <h3><a href="ousmer.html">Merouan Oussama Abdallah</a></h3>
                 <p class="text-capitalize">technical department's manager <br>at Shellmates club & Cybersecurity enthusiast</p>
                 <div class="social">
+                  <a href="https://twitter.com/Oussama99748618?t=RF4Gq7UETtpTbxWY7hfy4g&s=09&fbclid=IwAR1cFFS8MEaUiRxlfkzuLd2XLvCtfYKXsMNdL9YOAmY0H-RjqcP-_5Hx_WU" target="_blank"><i class="fa fa-twitter"></i></a>
                   <a href="https://www.facebook.com/abdou.merouan.73" target="_blank"><i class="fa fa-facebook"></i></a>
                   <a href = "mailto:jo_merouan@esi.dz" target="_blank"><i class="fa fa-inbox"></i></a>
                   <a href="https://www.linkedin.com/in/oussama-abdallah-merouan-835a421b6/" target="_blank"><i class="fa fa-linkedin"></i></a>
