--- a/ousmer.html
+++ b/ousmer.html
@@ -93,9 +93,10 @@
             <div class="details">
               <h2>Merouan Oussama Abdallah</h2>
               <div class="social">
+                <a href="https://twitter.com/Oussama99748618?t=RF4Gq7UETtpTbxWY7hfy4g&s=09&fbclid=IwAR1cFFS8MEaUiRxlfkzuLd2XLvCtfYKXsMNdL9YOAmY0H-RjqcP-_5Hx_WU" target="_blank"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.facebook.com/abdou.merouan.73" target="_blank"><i class="fa fa-facebook"></i></a>
-                  <a href = "mailto:jo_merouan@esi.dz" target="_blank"><i class="fa fa-inbox"></i></a>
-                  <a href="https://www.linkedin.com/in/oussama-abdallah-merouan-835a421b6/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href = "mailto:jo_merouan@esi.dz" target="_blank"><i class="fa fa-inbox"></i></a>
+                <a href="https://www.linkedin.com/in/oussama-abdallah-merouan-835a421b6/" target="_blank"><i class="fa fa-linkedin"></i></a>
               </div>
               <p>Merouan Oussama Abdallah is a third-year student at ESI Algiers, technical department's manager at Shellmates club, cybersecurity enthusiast and CTF player mainly in the web category and PWN with an interest in competitive programming. He is a member of Shellsec and CyberErudites.
               </p>
